add incomes operations

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL=mongodb+srv://admin:KfeRXP39pdgLQzpB@cluster0.kjde5ur.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://admin:KfeRXP39pdgLQzpB@cluster0.kjde5ur.mongodb.net/ExpensesDB
