--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
+    "chart.js": "^4.4.3",
+    "moment": "^2.30.1",
+    "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "styled-components": "^6.1.12"
   }
 }
